--- a/dewangkara/.env
+++ b/dewangkara/.env
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=dps
+DB_DATABASE=dewangkara
 DB_USERNAME=root
 DB_PASSWORD=
 
